--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,7 +5,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" aria-current="page" routerLink="user">Home<span class="sr-only"></span></a>
+        <a class="nav-item nav-link active" aria-current="page" routerLink="user">Search<span class="sr-only"></span></a>
       </div>
     </div>
 </nav>
