--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,35 +1,37 @@
 <div class="container">
-    <div class="card">
-        <div class="card-body">
-            <app-form (displayUser)="displayNewUser($event)"></app-form>
+    <div class="row">
+        <div class="col-md-7">
+            <div class="card">
+                <div class="card-body">
+                    <app-form (displayUser)="displayNewUser($event)"></app-form>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-5">
+            <div class="card">
+                <div class="card-body">
+                    <div class="info">
+                        <img src="https://avatars.githubusercontent.com/u/95276296?v=4" alt="" height="200px">
+                        <p appHighlight>User name: <strong>lewis-murgor</strong></p>
+                        <p>Followers: 0</p>
+                        <p>Following: 0</p>
+                        <p>Public repositories: 15</p>
+                        <a href="https://github.com/lewis-murgor">Check github account</a>
+                    </div>   
+                </div>
+            </div>
         </div>
     </div>
     <br>
-
-    <div class="row">
-        <div class="col-md-3">
-            <div class="card">
-                <div class="card-body">
-                    <img src="https://avatars.githubusercontent.com/u/95276296?v=4" alt="" height="200px">
-                    <p appHighlight>User name: <strong>lewis-murgor</strong></p>
-                    <p>Public repositories: 15</p>
-                     <a href="https://github.com/lewis-murgor">Check github account</a>
-                </div>
-            </div>
+    <div class="display">
+        <div *ngIf="user.login">
+            <img src="{{user.avatar_url}}" alt="">
+            <p appHighlight>User name: <strong>{{user.login}}</strong></p>
+            <p>Public repositories: {{user.public_repos}}</p>
+            <p>Updated on {{user.created_at|date}} which is {{user.created_at|dateDifference}}</p>
+            <br>
+            <button><a href="{{user.html_url}}"></a>Check Github account.</button>
         </div>
-        <div class="col-md-9">
-            <div class="display">
-                <div *ngIf="user.login">
-                    <img src="{{user.avatar_url}}" alt="">
-                    <p appHighlight>User name: <strong>{{user.login}}</strong></p>
-                    <p>Public repositories: {{user.public_repos}}</p>
-                    <p>Updated on {{user.created_at|date}} which is {{user.created_at|dateDifference}}</p>
-                    <br>
-                    <button><a href="{{user.html_url}}"></a>Check Github account.</button>
-                </div>
-            </div>
-        </div>
-    </div>  
 </div>
 
 
