add styling to page

--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -4,3 +4,10 @@
 .info {
     text-align: center;
 }
+.user-profile {
+    text-align: center;
+}
+h4 {
+    text-align: center;
+    color: olive;
+}
